--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,21 +30,29 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+  shared_preferences: ^2.0.17
+  flutter_riverpod: ^2.2.0
+  flutter_dotenv: ^5.0.2
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.8.0
+  device_info_plus: ^9.0.1
+  package_info_plus: ^3.0.3
+  pull_to_refresh: ^2.0.0
+  retrofit: ^4.0.1
+  dio: ^5.1.1
+  flutter_svg: ^2.0.6
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  freezed: ^2.3.2
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.1
+  retrofit_generator: ^6.0.0+1
   flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
@@ -59,9 +67,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/image/
+    - assets/images/svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
