--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,9 @@ flutter:
   assets:
     - assets/images/image/
     - assets/images/svg/
+    - .env
+    - .env_dev
+    - .env_stg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
