--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_svg: ^2.0.6
   intl: ^0.18.0
   connectivity_plus: ^4.0.1
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
